# ASCII-Dress-to-Impress

./: CMakeLists.txt  README.md  baseCharacter.h  main.cpp
Man/: maleClothes.cpp  maleClothes.h
Man/MaleModel/: main.cpp
Man/Pants/: mPants.cpp  mPants.h  pants.cpp  pants.h
Man/Pants/Khakis_Pants.cpp/: main.cpp
Man/Pants/cargo/: cargo.cpp  cargo.h  cargoPants.txt
Man/Pants/cargo_Pants.cpp/: main.cpp
Man/Pants/dress/: dress.cpp  dress.h  dressPants.txt  dresspants.txt
Man/Pants/dress_Pants/: main.cpp
Man/Pants/jeans/: jeans.cpp  jeans.h  jeans.txt
Man/Pants/jeans.cpp/: jeans.txt  main.cpp
Man/Pants/jeans_Pants.cpp/: main.cpp
Man/Pants/khakis/: khakis.cpp  khakis.h  khakis.txt
Man/Pants/shorts/: shorts.cpp  shorts.h  shorts.txt
Man/Pants/shorts2_Pants/: main.cpp
Man/Shirts/: mShirts.cpp  mShirts.h  shirts.cpp  shirts.h
Man/Shirts/Checkerboard_Shirt.cpp/: main.cpp
Man/Shirts/buttonDown/: buttonDown.cpp  buttonDown.h  buttonDown.txt
Man/Shirts/buttonDown_Shirt.cpp/: buttonDown.txt  main.cpp
Man/Shirts/checkerboard/: checkerboard.cpp  checkerboard.h  checkerboard.txt
Man/Shirts/grayShirt/: grayShirt.cpp  grayShirt.h  shirt.txt
Man/Shirts/gray_Shirt.cpp/: main.cpp  shirt.txt
Man/Shirts/striped_Shirt.cpp/: main.cpp  stripes.txt
Man/Shirts/strippedShirt/: strippedShirt.cpp  strippedShirt.h
Man/Shirts/tanktopShirt/: tankTop.h  tankTop.txt  tankTopShirt.cpp
Man/Shirts/tanktop_Shirt.cpp/: main.cpp
Man/maleModel/: maleModel.cpp  maleModel.h
Woman/: FemaleClothes.h  femaleClothes.cpp  femaleClothes.h
Woman/FemaleModel.cpp/: female.txt  main.cpp
Woman/Pants/BlackJeans_Pants.cpp/: BlackJeans.cpp  BlackJeans.txt
Woman/Pants/JeanShorts_Pants.cpp/: JeanShorts.h  JeansShorts.txt  main.cpp
Woman/Pants/leggigns_Pants.cpp/: leggings.txt
Woman/Pants/leggings_Pants.cpp/: leggings.cpp  leggings.txt
Woman/Shirts/PinkBlouse_Shirt.cpp/: main.cpp
Woman/Shirts/blueblouse_Shirt.cpp/: blueBlouse.h  blueBlouse.txt  main.cpp
Woman/Shirts/tanktop_Shirt.cpp/: main.cpp  tanktop.txt
Woman/blouse/: blouse.cpp  blouse.h
Woman/blouse/blueBlouse/: blueBlouse.cpp  blueBlouse.h
Woman/blouse/pinkBlouse/: PinkBlouse.txt  pinkBlouse.cpp  pinkBlouse.h  pinkBlouse.txt
Woman/dresses/: dresses.cpp  dresses.h
Woman/dresses/RedDress.cpp/: RedDress.txt  main.cpp  redDress.h
Woman/dresses/Tight_Dress.cpp/: main.cpp  tightDress.h  tightdress.txt
Woman/dresses/redDress/: RedDress.txt  redDress.cpp  redDress.h  redDress.txt
Woman/dresses/tightDress/: tightDress.cpp  tightDress.h  tightDress.txt  tightdress.txt
Woman/fPants/: fPants.cpp  fPants.h
Woman/fPants/blackJeans/: blackJeans.cpp  blackJeans.h  blackJeans.txt
Woman/fPants/jeanShorts/: jeanShorts.cpp  jeanShorts.h  jeanShorts.txt
Woman/fPants/leggings/: leggings.cpp  leggings.h  leggings.txt
Woman/femaleModel/: female.txt  femaleModel.cpp  femaleModel.h  femaleModel.txt
